wwr/styles/site-plan-rafting.css
/* https: //coolors.co/palette/ffbe0b-fb5607-ff006e-8338ec-3a86ff */

/* if you are using any Google fonts change the font names below to your fonts. 
Any spaces in your font name should be replaced with a +. 
Fonts are separated by a & */
@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Ubuntu:ital,wght@0,400;0,700;1,700&display=swap');

:root {
  /* change the values below to your colors from your palette */
  --primary-color: #0E2E55;
  --secondary-color: #FE7D15;
  --accent1-color: #3dbde9;
  --accent2-color: #ffffff;

  /* change the values below to your chosen font(s) */
  --heading-font: "Kaushan Script";
  --paragraph-font: Ubuntu;

  /* these colors below should be chosen from among your palette colors above */
  --headline-color-on-white: #0E2E55;
  /* headlines on a white background */
  --headline-color-on-color: #ffffff;
  /* headlines on a colored background */
  --paragraph-color-on-white: #0E2E55;
  /* paragraph text on a white background */
  --paragraph-color-on-color: #ffffff;
  /* paragraph text on a colored background */
  --paragraph-background-color: #0E2E55;
  --nav-link-color: #ffffff;
  --nav-background-color: #FE7D15;
  --nav-hover-link-color: #0E2E55;
  --nav-hover-background-color: #3dbde9;
}


/*  Look around below...but DON'T CHANGE ANYTHING! */

body {
  max-width: 960px;
  margin: 0 auto;
  padding: 4em;
  font-size: 18px;
  text-align: center;
}

img {
  display: block;
  margin: 0 auto;
  max-width: 300px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--heading-font);
  color: var(--headline-color-on-white);
}

h2 {
  text-align: center;
}

hr {
  height: 3px;
  margin: 35px 0;
  background: var(--accent1-color);
}

header {
  padding: 1em;
  text-align: center;
  color: var(--headline-color-on-color);
  background-color: var(--paragraph-background-color);
}

header>h1,
header>h2 {
  color: var(--headline-color-on-color);
}

p {
  font-family: var(--paragraph-font);
  color: var(--paragraph-color-on-white);
  padding: 1em;
}

.colors {
  width: 100%;
  min-width: 350px;
  margin: 30px auto;
  text-align: center;
}

.colors th {
  background-color: #999;
}

.colors td {
  width: 25%;
  height: 3em;
}

.primary {
  background-color: var(--primary-color);
}

.secondary {
  background-color: var(--secondary-color);
}

.accent1 {
  background-color: var(--accent1-color);
}

.accent2 {
  background-color: var(--accent2-color);
}

p.colored {
  background-color: var(--paragraph-background-color);
  color: var(--paragraph-color-on-color);
}

nav {
  background-color: var(--nav-background-color);
  line-height: 3em;
  text-align: center;
  font-size: 1.2em;
}

nav {
  list-style-type: none;
  display: flex;
}

nav a {
  padding: 1em;
  min-width: 120px;
  text-decoration: none;
  padding: 10px;
}

nav a:link,
nav a:visited {
  color: var(--nav-link-color);
}

nav a:hover {
  color: var(--nav-hover-link-color);
  background-color: var(--nav-hover-background-color);
}

.sitemap {
  display: grid;
  justify-content: center;

  grid-template-columns: repeat(6, 15%);
  grid-template-rows: 3em 1.5em 1.5em 3em;
  grid-template-areas: ". . home home . ."
    ". . . top . ."
    ". left left right right ."
    "page2 page2 . . page3 page3";
}

.sitemap>div {
  text-align: center;
}

.sm-home {
  grid-area: home;
  background-color: #ccc;
  line-height: 3em;
}

.sm-page2 {
  grid-area: page2;
  background-color: #ccc;
  line-height: 3em;
}

.sm-page3 {
  grid-area: page3;
  background-color: #ccc;
  line-height: 3em;
}

.top {
  grid-area: top;
  border-left: 1px solid;
}

.left {
  grid-area: left;
  border-top: 1px solid;
  border-left: 1px solid;
}

.right {
  grid-area: right;
  border-top: 1px solid;
  border-right: 1px solid;
}

